kubernetes/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-app-service
spec:
  selector:
    app: auth
  ports:
    - protocol: TCP
      port: 80    
      targetPort: 3000
  type: ClusterIP
